--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
-    "cypress:open":"cypress open"
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "D": "^1.0.0",
+    "axios": "^1.13.2",
     "cypress": "^15.6.0",
     "next": "15.5.4",
     "react": "19.1.0",
