--- a/package.json
+++ b/package.json
@@ -1,35 +1,39 @@
 {
-  "name": "movie-explorer",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
-    "start": "next start",
-    "lint": "eslint",
-    "cypress:open": "cypress open"
-  },
-  "dependencies": {
-    "D": "^1.0.0",
-    "axios": "^1.13.2",
-    "cypress": "^15.6.0",
-    "next": "15.5.4",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "swr": "^2.3.6"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@svgr/webpack": "^8.1.0",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "clsx": "^2.1.1",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.4",
-    "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4",
-    "typescript": "^5"
-  }
+    "name": "movie-explorer",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev --turbopack",
+        "build": "next build --turbopack",
+        "start": "next start",
+        "lint": "eslint",
+        "format": "prettier . --write",
+        "prettier-check": "prettier --check .",
+        "cypress:open": "cypress open"
+    },
+    "dependencies": {
+        "D": "^1.0.0",
+        "axios": "^1.13.2",
+        "cypress": "^15.6.0",
+        "next": "15.5.4",
+        "react": "19.1.0",
+        "react-dom": "19.1.0",
+        "swr": "^2.3.6"
+    },
+    "devDependencies": {
+        "@eslint/eslintrc": "^3",
+        "@svgr/webpack": "^8.1.0",
+        "@tailwindcss/postcss": "^4",
+        "@types/node": "^20",
+        "@types/react": "^19",
+        "@types/react-dom": "^19",
+        "clsx": "^2.1.1",
+        "eslint": "^9",
+        "eslint-config-next": "15.5.4",
+        "eslint-config-prettier": "^10.1.8",
+        "prettier": "3.6.2",
+        "tailwind-merge": "^3.3.1",
+        "tailwindcss": "^4",
+        "typescript": "^5"
+    }
 }
